src/plugins/plantUML/parser/antlr/PlantUMLGrammarParser.java
// Generated from PlantUMLGrammar.g4 by ANTLR 4.7.2
package plugins.plantUML.parser.antlr;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class PlantUMLGrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		LPAREN=1, RPAREN=2, LSQUARE=3, RSQUARE=4, LCURLY=5, RCURLY=6, DQUOTE=7, 
		COLON=8, SHARP=9, COMMA=10, TILDE=11, STATIC_MOD=12, ABSTRACT_MOD=13, 
		STEREO_BEGIN=14, STEREO_END=15, TEMPLATE_TYPE_BEGIN=16, TEMPLATE_TYPE_END=17, 
		STARTUML=18, INTERFACE=19, HIDE=20, ENUM=21, ENDUML=22, CLASS=23, ABSTRACT=24, 
		CONNECTOR=25, MULTIPLICITY=26, PLUS=27, MINUS=28, NEWPAGE=29, NEWLINE=30, 
		IDENT=31, BLOCK_COMMENT=32, WS=33, ANYTHING_ELSE=34;
	public static final int
		RULE_umlFile = 0, RULE_uml = 1, RULE_embeddedUml = 2, RULE_diagram = 3, 
		RULE_class_diagram = 4, RULE_class_diagram_noise_line = 5, RULE_class_declaration = 6, 
		RULE_hide_declaration = 7, RULE_attribute = 8, RULE_method = 9, RULE_connection_left = 10, 
		RULE_connection_right = 11, RULE_class_name = 12, RULE_connection = 13, 
		RULE_visibility = 14, RULE_function_argument = 15, RULE_function_argument_list = 16, 
		RULE_template_argument = 17, RULE_template_argument_list = 18, RULE_ident = 19, 
		RULE_modifiers = 20, RULE_stereotype = 21, RULE_type_declaration = 22, 
		RULE_class_type = 23, RULE_item_list = 24, RULE_enum_declaration = 25;
	private static String[] makeRuleNames() {
		return new String[] {
			"umlFile", "uml", "embeddedUml", "diagram", "class_diagram", "class_diagram_noise_line", 
			"class_declaration", "hide_declaration", "attribute", "method", "connection_left", 
			"connection_right", "class_name", "connection", "visibility", "function_argument", 
			"function_argument_list", "template_argument", "template_argument_list", 
			"ident", "modifiers", "stereotype", "type_declaration", "class_type", 
			"item_list", "enum_declaration"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'('", "')'", "'['", "']'", "'{'", "'}'", "'\"'", "':'", "'#'", 
			"','", "'~'", "'{static}'", "'{abstract}'", "'<<'", "'>>'", "'<'", "'>'", 
			"'@startuml'", "'interface'", "'hide'", "'enum'", "'@enduml'", "'class'", 
			"'abstract'", null, null, "'+'", "'-'", "'newpage'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "LPAREN", "RPAREN", "LSQUARE", "RSQUARE", "LCURLY", "RCURLY", "DQUOTE", 
			"COLON", "SHARP", "COMMA", "TILDE", "STATIC_MOD", "ABSTRACT_MOD", "STEREO_BEGIN", 
			"STEREO_END", "TEMPLATE_TYPE_BEGIN", "TEMPLATE_TYPE_END", "STARTUML", 
			"INTERFACE", "HIDE", "ENUM", "ENDUML", "CLASS", "ABSTRACT", "CONNECTOR", 
			"MULTIPLICITY", "PLUS", "MINUS", "NEWPAGE", "NEWLINE", "IDENT", "BLOCK_COMMENT", 
			"WS", "ANYTHING_ELSE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "PlantUMLGrammar.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public PlantUMLGrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class UmlFileContext extends ParserRuleContext {
		public Token text;
		public TerminalNode EOF() { return getToken(PlantUMLGrammarParser.EOF, 0); }
		public List<EmbeddedUmlContext> embeddedUml() {
			return getRuleContexts(EmbeddedUmlContext.class);
		}
		public EmbeddedUmlContext embeddedUml(int i) {
			return getRuleContext(EmbeddedUmlContext.class,i);
		}
		public UmlFileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_umlFile; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PlantUMLGrammarListener ) ((PlantUMLGrammarListener)listener).enterUmlFile(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PlantUMLGrammarListener ) ((PlantUMLGrammarListener)listener).exitUmlFile(this);
		}
	}

	public final UmlFileContext umlFile() throws RecognitionException {
		UmlFileContext _localctx = new UmlFileContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_umlFile);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(61);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(55);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
					while ( _alt!=1 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
						if ( _alt==1+1 ) {
							{
							{
							setState(52);
							((UmlFileContext)_localctx).text = matchWildcard();
							}
							} 
						}
						setState(57);
						_errHandler.sync(this);
						_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
					}
					setState(58);
					embeddedUml();
					}
					} 
				}
				setState(63);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			}
			setState(67);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			while ( _alt!=1 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1+1 ) {
					{
					{
					setState(64);
					((UmlFileContext)_localctx).text = matchWildcard();
					}
					} 
				}
				setState(69);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			}
			setState(70);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class UmlContext extends ParserRuleContext {
		public EmbeddedUmlContext embeddedUml() {
			return getRuleContext(EmbeddedUmlContext.class,0);
		}
		public TerminalNode EOF() { return getToken(PlantUMLGrammarParser.EOF, 0); }
		public UmlContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_uml; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PlantUMLGrammarListener ) ((PlantUMLGrammarListener)listener).enterUml(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PlantUMLGrammarListener ) ((PlantUMLGrammarListener)listener).exitUml(this);
		}
	}

	public final UmlContext uml() throws RecognitionException {
		UmlContext _localctx = new UmlContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_uml);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(72);
			embeddedUml();
			setState(73);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EmbeddedUmlContext extends ParserRuleContext {
		public TerminalNode STARTUML() { return getToken(PlantUMLGrammarParser.STARTUML, 0); }
		public TerminalNode ENDUML() { return getToken(PlantUMLGrammarParser.ENDUML, 0); }
		public IdentContext ident() {
			return getRuleContext(IdentContext.class,0);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(PlantUMLGrammarParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(PlantUMLGrammarParser.NEWLINE, i);
		}
		public DiagramContext diagram() {
			return getRuleContext(DiagramContext.class,0);
		}
		public EmbeddedUmlContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_embeddedUml; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PlantUMLGrammarListener ) ((PlantUMLGrammarListener)listener).enterEmbeddedUml(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PlantUMLGrammarListener ) ((PlantUMLGrammarListener)listener).exitEmbeddedUml(this);
		}
	}

	public final EmbeddedUmlContext embeddedUml() throws RecognitionException {
		EmbeddedUmlContext _localctx = new EmbeddedUmlContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_embeddedUml);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(75);
			match(STARTUML);
			setState(77);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << CLASS) | (1L << ABSTRACT) | (1L << IDENT))) != 0)) {
				{
				setState(76);
				ident();
				}
			}

			setState(80); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(79);
					match(NEWLINE);
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(82); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			setState(85);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				{
				setState(84);
				diagram();
				}
				break;
			}
			setState(87);
			match(ENDUML);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DiagramContext extends ParserRuleContext {
		public Class_diagramContext class_diagram() {
			return getRuleContext(Class_diagramContext.class,0);
		}
		public DiagramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_diagram; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PlantUMLGrammarListener ) ((PlantUMLGrammarListener)listener).enterDiagram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PlantUMLGrammarListener ) ((PlantUMLGrammarListener)listener).exitDiagram(this);
		}
	}

	public final DiagramContext diagram() throws RecognitionException {
		DiagramContext _localctx = new DiagramContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_diagram);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(89);
			class_diagram();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Class_diagramContext extends ParserRuleContext {
		public List<TerminalNode> NEWLINE() { return getTokens(PlantUMLGrammarParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(PlantUMLGrammarParser.NEWLINE, i);
		}
		public List<Class_declarationContext> class_declaration() {
			return getRuleContexts(Class_declarationContext.class);
		}
		public Class_declarationContext class_declaration(int i) {
			return getRuleContext(Class_declarationContext.class,i);
		}
		public List<ConnectionContext> connection() {
			return getRuleContexts(ConnectionContext.class);
		}
		public ConnectionContext connection(int i) {
			return getRuleContext(ConnectionContext.class,i);
		}
		public List<Enum_declarationContext> enum_declaration() {
			return getRuleContexts(Enum_declarationContext.class);
		}
		public Enum_declarationContext enum_declaration(int i) {
			return getRuleContext(Enum_declarationContext.class,i);
		}
		public List<Hide_declarationContext> hide_declaration() {
			return getRuleContexts(Hide_declarationContext.class);
		}
		public Hide_declarationContext hide_declaration(int i) {
			return getRuleContext(Hide_declarationContext.class,i);
		}
		public List<Class_diagram_noise_lineContext> class_diagram_noise_line() {
			return getRuleContexts(Class_diagram_noise_lineContext.class);
		}
		public Class_diagram_noise_lineContext class_diagram_noise_line(int i) {
			return getRuleContext(Class_diagram_noise_lineContext.class,i);
		}
		public Class_diagramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_class_diagram; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PlantUMLGrammarListener ) ((PlantUMLGrammarListener)listener).enterClass_diagram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PlantUMLGrammarListener ) ((PlantUMLGrammarListener)listener).exitClass_diagram(this);
		}
	}

	public final Class_diagramContext class_diagram() throws RecognitionException {
		Class_diagramContext _localctx = new Class_diagramContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_class_diagram);
		try {
			int _alt;
			setState(119);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,11,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(110); 
				_errHandler.sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						{
						setState(94);
						_errHandler.sync(this);
						_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
						while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
							if ( _alt==1 ) {
								{
								{
								setState(91);
								class_diagram_noise_line();
								}
								} 
							}
							setState(96);
							_errHandler.sync(this);
							_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
						}
						setState(101);
						_errHandler.sync(this);
						switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
						case 1:
							{
							setState(97);
							class_declaration();
							}
							break;
						case 2:
							{
							setState(98);
							connection();
							}
							break;
						case 3:
							{
							setState(99);
							enum_declaration();
							}
							break;
						case 4:
							{
							setState(100);
							hide_declaration();
							}
							break;
						}
						setState(103);
						match(NEWLINE);
						setState(107);
						_errHandler.sync(this);
						_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
						while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
							if ( _alt==1 ) {
								{
								{
								setState(104);
								class_diagram_noise_line();
								}
								} 
							}
							setState(109);
							_errHandler.sync(this);
							_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
						}
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(112); 
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
				} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(115); 
				_errHandler.sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						{
						setState(114);
						class_diagram_noise_line();
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(117); 
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,10,_ctx);
				} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Class_diagram_noise_lineContext extends ParserRuleContext {
		public List<TerminalNode> NEWLINE() { return getTokens(PlantUMLGrammarParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(PlantUMLGrammarParser.NEWLINE, i);
		}
		public TerminalNode CLASS() { return getToken(PlantUMLGrammarParser.CLASS, 0); }
		public TerminalNode ENUM() { return getToken(PlantUMLGrammarParser.ENUM, 0); }
		public TerminalNode HIDE() { return getToken(PlantUMLGrammarParser.HIDE, 0); }
		public TerminalNode CONNECTOR() { return getToken(PlantUMLGrammarParser.CONNECTOR, 0); }
		public Class_diagram_noise_lineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_class_diagram_noise_line; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PlantUMLGrammarListener ) ((PlantUMLGrammarListener)listener).enterClass_diagram_noise_line(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PlantUMLGrammarListener ) ((PlantUMLGrammarListener)listener).exitClass_diagram_noise_line(this);
		}
	}

	public final Class_diagram_noise_lineContext class_diagram_noise_line() throws RecognitionException {
		Class_diagram_noise_lineContext _localctx = new Class_diagram_noise_lineContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_class_diagram_noise_line);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(128);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << LPAREN) | (1L << RPAREN) | (1L << LSQUARE) | (1L << RSQUARE) | (1L << LCURLY) | (1L << RCURLY) | (1L << DQUOTE) | (1L << COLON) | (1L << SHARP) | (1L << COMMA) | (1L << TILDE) | (1L << STATIC_MOD) | (1L << ABSTRACT_MOD) | (1L << STEREO_BEGIN) | (1L << STEREO_END) | (1L << TEMPLATE_TYPE_BEGIN) | (1L << TEMPLATE_TYPE_END) | (1L << STARTUML) | (1L << INTERFACE) | (1L << ENDUML) | (1L << ABSTRACT) | (1L << MULTIPLICITY) | (1L << PLUS) | (1L << MINUS) | (1L << NEWPAGE) | (1L << IDENT) | (1L << BLOCK_COMMENT) | (1L << WS) | (1L << ANYTHING_ELSE))) != 0)) {
				{
				setState(121);
				_la = _input.LA(1);
				if ( _la <= 0 || ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << HIDE) | (1L << ENUM) | (1L << CLASS) | (1L << CONNECTOR) | (1L << NEWLINE))) != 0)) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(125);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,12,_ctx);
				while ( _alt!=1 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1+1 ) {
						{
						{
						setState(122);
						matchWildcard();
						}
						} 
					}
					setState(127);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,12,_ctx);
				}
				}
			}

			setState(130);
			match(NEWLINE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Class_declarationContext extends ParserRuleContext {
		public Class_typeContext class_type() {
			return getRuleContext(Class_typeContext.class,0);
		}
		public IdentContext ident() {
			return getRuleContext(IdentContext.class,0);
		}
		public TerminalNode LCURLY() { return getToken(PlantUMLGrammarParser.LCURLY, 0); }
		public TerminalNode RCURLY() { return getToken(PlantUMLGrammarParser.RCURLY, 0); }
		public List<AttributeContext> attribute() {
			return getRuleContexts(AttributeContext.class);
		}
		public AttributeContext attribute(int i) {
			return getRuleContext(AttributeContext.class,i);
		}
		public List<MethodContext> method() {
			return getRuleContexts(MethodContext.class);
		}
		public MethodContext method(int i) {
			return getRuleContext(MethodContext.class,i);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(PlantUMLGrammarParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(PlantUMLGrammarParser.NEWLINE, i);
		}
		public Class_declarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_class_declaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PlantUMLGrammarListener ) ((PlantUMLGrammarListener)listener).enterClass_declaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PlantUMLGrammarListener ) ((PlantUMLGrammarListener)listener).exitClass_declaration(this);
		}
	}

	public final Class_declarationContext class_declaration() throws RecognitionException {
		Class_declarationContext _localctx = new Class_declarationContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_class_declaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(132);
			class_type();
			setState(133);
			ident();
			setState(144);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==LCURLY) {
				{
				setState(134);
				match(LCURLY);
				setState(140);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << SHARP) | (1L << TILDE) | (1L << STATIC_MOD) | (1L << ABSTRACT_MOD) | (1L << CLASS) | (1L << ABSTRACT) | (1L << PLUS) | (1L << MINUS) | (1L << NEWLINE) | (1L << IDENT))) != 0)) {
					{
					setState(138);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,14,_ctx) ) {
					case 1:
						{
						setState(135);
						attribute();
						}
						break;
					case 2:
						{
						setState(136);
						method();
						}
						break;
					case 3:
						{
						setState(137);
						match(NEWLINE);
						}
						break;
					}
					}
					setState(142);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(143);
				match(RCURLY);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Hide_declarationContext extends ParserRuleContext {
		public TerminalNode HIDE() { return getToken(PlantUMLGrammarParser.HIDE, 0); }
		public IdentContext ident() {
			return getRuleContext(IdentContext.class,0);
		}
		public Hide_declarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_hide_declaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PlantUMLGrammarListener ) ((PlantUMLGrammarListener)listener).enterHide_declaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PlantUMLGrammarListener ) ((PlantUMLGrammarListener)listener).exitHide_declaration(this);
		}
	}

	public final Hide_declarationContext hide_declaration() throws RecognitionException {
		Hide_declarationContext _localctx = new Hide_declarationContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_hide_declaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(146);
			match(HIDE);
			setState(147);
			ident();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
